--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,18 +100,77 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 86%; 
+  width: 88.3%;
   margin: 0 auto;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --primary-color: #41A8B7;
+  --para-color: #BDBDBA;
+  --heading-color: #222828;
+  --white: #fff;
+  --black: #000;
 }
 /*=================================
   Header styling starts here
 =================================*/
+header {
+  background-color: var(--primary-color);
+}
 
+header .wrapper {
+  padding: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.logo {
+  padding-left: 1.3%;
+}
 
+.hamburger {
+  display: none;
+}
 
+.hamburger .bar {
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  display: block;
+  background-color: var(--white);
+  text-indent: -9999px;
+  transition: all 0.3s;
+}
 
+nav.navbar {
+  flex: 0 0 46.2%;
+}
 
+.nav-link {
+  padding: 10px 22px;
+  position: relative;
+  color: var(--white);
+  font-size: 14px;
+  transition: all .3s ease-in-out;
+}
+
+.nav-link.active::before,
+.nav-link:hover::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: var(--white);
+  position: absolute;
+  top: 4px;
+  left: 22px;
+}
 /*=================================
   Header styling ends here
 =================================*/  
