--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,7 +324,8 @@ nav.navbar {
   transition: all .3s ease-in-out;
 }
 
-.explore:hover, .data-link:hover{
+.explore:hover, .data-link:hover,
+.More-btn a:hover{
   border: 1px solid var(--primary-color);
   background-color: var(--white);
   color: var(--primary-color);
@@ -898,7 +899,7 @@ select {
 }
 /* setting wrapper for about page as per template */
 .about-banner .wrapper ,.cities .wrapper , .offer .wrapper , .discover .wrapper ,
-.location .wrapper, .about-wrap .wrapper {
+.location .wrapper {
   width: 84.5%;
   padding: 100px 0 106px 0;
 }
@@ -1051,7 +1052,7 @@ figcaption {
   align-items: center;
 }
 
-.offer-heading {
+.offer-heading , .location-heading {
   padding-bottom: 14px;
   color: #424242;
   font-size: 28px;
@@ -1063,7 +1064,7 @@ figcaption {
   padding: 75px 0 51px 0;
 }
 
-.offer-description {
+.offer-description ,.location-description {
   font-size: 13px;
   color: #b9b1b1;
   width: 47%;
@@ -1117,21 +1118,15 @@ figcaption {
 
 .cost span {
   display: block;
+  color:#b9b1b1 ;
+  font-size: 12px;
 }
 
 .cost {
   color: var(--primary-color);
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 800;
-}
-
-.person-icon , .cost span {
-  font-size: 13px;
-  color: #b0b0b0;
-}
-
-.person-icon {
-  padding-left: 22px;
+  text-align: center;
   position: relative;
 }
 
@@ -1155,6 +1150,21 @@ figcaption {
   color: #b4b4b4;
 }
 
+.left-icon::after {
+  content: "\f054";
+  color: #afafaf;
+  float: left;
+  font-family: "FontAwesome";
+  position: absolute;
+  left: 46%;
+  top: 3px;
+  font-size: 10px;
+}
+
+.deal-item span {
+  margin-left: 8px;
+}
+
 .deal-btn {
   display: flex;
   flex-direction: column;
@@ -1170,6 +1180,13 @@ figcaption {
   border-radius: 30px;
   padding: 10px 32px;
   transition: all .3s ease-in-out;
+}
+
+.person-icon { 
+  padding-left: 22px;
+  position: relative;
+  font-size: 12px;
+  color: #b4b4b4;
 }
 
 .font_icon::before {
@@ -1223,8 +1240,122 @@ figcaption {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all .3s ease-in-out;
+}
+
+.btn-arrow:hover::before {
+  color: var(--white);
+  border-color: var(--white);
 }
 /* offer section end here */
+/* discover section start */
+.discover {
+  border-top: 1px solid var(--white);
+  border-bottom: 1px solid var(--white);
+  background-color: #232223;
+}
+
+.discover .wrapper {
+  padding:100px 0 112px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.discover-fig {
+  flex-basis: 44.5%;
+}
+
+.discover-content {
+  flex-basis: 49%;
+}
+
+.discover-heading {
+  padding-bottom: 12px;
+  color: #424242;
+  font-size: 27px;
+  font-weight: 600;
+  opacity: 0.6;
+}
+
+.discover-description{
+  font-size: 13px;
+  color: #b9b1b1;
+}
+
+.discover-counter {
+  padding-top: 41px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.counter-1 , .counter-2 {
+  padding: 23px 0 23px 4%;
+  margin-bottom: 27px;
+  flex-basis: 48%;
+  background-color: var(--white);
+}
+
+.counter-1 {
+  border-radius: 8px;
+}
+
+.country-counter {
+  color: #363636;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.counter-heading {
+  color: var(--primary-color);
+}
+
+.counter-2 {
+  flex-basis: 50%;
+}
+
+.border-1{
+  border-radius: 8px 0 0 8px;
+}
+.border{
+  border-radius: 0  8px 8px 0 ;
+}
+
+.More-btn {
+  padding-top: 31px;
+}
+
+.More-btn a {
+  font-size: 14px;
+  background-color: var(--primary-color);
+  color: var(--white);
+  font-weight: 600;
+  padding: 9px 22px;
+  border: 1px solid var(--primary-color);
+  border-radius: 30px;
+  transition: all .3s ease-in-out;
+}
+/* discover section end here */
+/* location sectionn start here */
+.location {
+  background-color: #232223;
+}
+
+.content-wrap {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-item {
+  display: none;
+}
+
+.image-item:nth-child(1){
+  display: block;
+}
 /*=================================
   main styling ends here
 =================================*/
